<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center|top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualzar_datos"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/user"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="10dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_observation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/observaciones">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextObservation"
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:gravity="top|left"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>





</LinearLayout>