<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/driverManager"
        android:layout_width="170dp"
        android:layout_height="220dp"
        android:layout_margin="10dp"
        app:cardElevation="7dp"
        app:cardCornerRadius="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="2dp"
            android:padding="10dp"
            tools:ignore="UseCompoundDrawables">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/thumbnail"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/user"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:layout_gravity="center_horizontal|center_vertical"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btnedit"
                android:text="@string/actualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
        </LinearLayout>



    </androidx.cardview.widget.CardView>
</RelativeLayout>